k8s/router.service.yml
kind: Service
apiVersion: v1
metadata:
  name:  router-service
  labels:
    app: router
spec:
  selector:
    app:  router
  type:  ClusterIP
  ports:
  - name:  http
    port:  3000
    targetPort:  3000
